--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,24 @@
+version: '3'
+
 services:
   postgres:
-    image: postgres:16
-    container_name: listings-postgres
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-listings}
-      POSTGRES_USER: ${POSTGRES_USER:-listings_user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-listings_password}
+    image: postgres:latest
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_DB: property_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres_password
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:latest
-    container_name: listings-redis
-    restart: unless-stopped
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
 
 volumes:
-  pgdata:
+  postgres_data:
+  redis_data:
